--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <i class="fas fa-bars" id="sidebar_btn"></i>
       </label>
       <div class="left_area">
-        <h3>NMA<span>Server</span></h3>
+          <a href="#">
+            <h3>NMA<span>Server</span></h3>
+          </a>
       </div>
       <div class="right_area">
         <a href="#" class="logout_btn">Log ud</a>
