--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!--mobile navigation bar start-->
     <div class="mobile_nav">
       <div class="nav_bar">
-        <img src="1.png" class="mobile_profile_image" alt="">
+        <img src="images/1.png" class="mobile_profile_image" alt="">
         <i class="fa fa-bars nav_btn"></i>
       </div>
       <div class="mobile_nav_items">
@@ -45,7 +45,7 @@
     <!--sidebar start-->
     <div class="sidebar">
       <div class="profile_info">
-        <img src="1.png" class="profile_image" alt="">
+        <img src="images/1.png" class="profile_image" alt="">
         <h4>Jens</h4>
       </div>
       <a href="https://nmaserver.xyz/"><i class="fas fa-desktop"></i><span>Forside</span></a>
