--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
       <div class="mobile_nav_items">
         <a href="https://nmaserver.xyz/"><i class="fas fa-desktop"></i><span>Forside</span></a>
         <a href="https://nmaserver.xyz/"><i class="fas fa-cogs"></i><span>Plex</span></a>
-        <a href="https://nmaserver.xyz/"><i class="fas fa-table"></i><span>Ombi</span></a>
-        <a href="https://nmaserver.xyz/"><i class="fas fa-th"></i><span>Min Konto</span></a>
-        <a href="https://nmaserver.xyz/"><i class="fas fa-info-circle"></i><span>Medlemmer</span></a>
-        <a href="https://nmaserver.xyz/"><i class="fas fa-sliders-h"></i><span>Indstillinger</span></a>
+        <a href="/Ombi"><i class="fas fa-table"></i><span>Ombi</span></a>
+        <a href="/Min-Konto"><i class="fas fa-th"></i><span>Min Konto</span></a>
+        <a href="/Medlemmer"><i class="fas fa-info-circle"></i><span>Medlemmer</span></a>
+        <a href="/Medlemmer"><i class="fas fa-sliders-h"></i><span>Indstillinger</span></a>
       </div>
     </div>
     <!--mobile navigation bar end-->
